--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,6 @@
             "email": "help@optipic.io",
             "homepage": "https://optipic.io/en/cdn/"
         }
-    ]
+    ],
+    "minimum-stability": "dev"
 }
